tests/baselines/reference/scannerUnicodeEscapeInKeyword1.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerUnicodeEscapeInKeyword1.ts(1,1): error TS1260: This keyword must not contain an escaped character.


==== tests/cases/conformance/scanner/ecmascript5/scannerUnicodeEscapeInKeyword1.ts (1 errors) ====
    \u0076ar x = "hello";
    ~~~~~~~~
!!! error TS1260: This keyword must not contain an escaped character.